web-infras/parser/tests/fixtures/esprima/es2017/async/functions/invalid-async-function-expression-duplicate-params/output.txt
[SyntaxError]: duplicate params (1,28)
1|f = async function (x = 1, x) {}
 |                          ^
